2011-06-25  Rob Buis  <rbuis@rim.com>

Reviewed by Nikolas Zimmermann.

        SVG1.1SE test linking-uri-01-b.svg fails
        https://bugs.webkit.org/show_bug.cgi?id=63322

        Allow navigating to internal <view> targets. When choosing Back ensure
        the <svg> current view is initialized correctly.

        Tests: svg/W3C-SVG-1.1-SE/linking-uri-01-b.svg
               svg/custom/linking-uri-01-b.svg

        * page/FrameView.cpp: Delegate to setupInitialView.
        (WebCore::FrameView::scrollToAnchor):
        * svg/SVGAElement.cpp: Allow navigating to internal <view> targets.
        (WebCore::SVGAElement::defaultEventHandler):
        * svg/SVGSVGElement.cpp:
        (WebCore::SVGSVGElement::setupInitialView): Initialize current view depending on fragment identifier.
        (WebCore::SVGSVGElement::inheritViewAttributes):
        * svg/SVGSVGElement.h:
2011-06-25  Rob Buis  <rbuis@rim.com>

        Reviewed by Nikolas Zimmermann.

        SVG1.1SE test linking-uri-01-b.svg fails
        https://bugs.webkit.org/show_bug.cgi?id=63322

        Add a test for navigating to an inner <view> anchor. The changed test results
        are improvements.

        * platform/mac/svg/W3C-SVG-1.1-SE/linking-uri-01-b-expected.png: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/linking-uri-01-b-expected.txt: Added.
        * platform/mac/svg/custom/linking-a-03-b-all-expected.png:
        * platform/mac/svg/custom/linking-a-03-b-all-expected.txt:
        * platform/mac/svg/custom/linking-a-03-b-transform-expected.png:
        * platform/mac/svg/custom/linking-a-03-b-transform-expected.txt:
        * platform/mac/svg/custom/linking-a-03-b-viewBox-transform-expected.png:
        * platform/mac/svg/custom/linking-a-03-b-viewBox-transform-expected.txt:
        * platform/mac/svg/custom/linking-uri-01-b-expected.png: Added.
        * platform/mac/svg/custom/linking-uri-01-b-expected.txt: Added.
        * svg/W3C-SVG-1.1-SE/linking-uri-01-b.svg: Added.
        * svg/custom/linking-uri-01-b.svg: Added.


Canonical link: https://commits.webkit.org/79041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89745 268f45cc-cd09-0410-ab3c-d52691b4dbfc